@@ -1,5 +1,6 @@
 Version 2.02.169 - 
 =====================================
+  Add missing udev sync when flushing dirty cache content.
   vgchange -p accepts only uint32 numbers.
   Report thin LV date for merged LV when the merge is in progress.
   Detect if snapshot merge really started before polling for progress.
